[package]
name = "rustling-js"
version = "0.1.0"
authors = ["Mathieu Quisefit"]
license = "MIT"
edition = "2018"
exclude = ["index.node"]

[lib]
name = "rustling_js"
crate-type = ["cdylib"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.45"
neon-serde = { git = "https://github.com/antonok-edm/neon-serde", branch = "refactor/update-neon-0.8" }
rustling-ontology = { git = "https://github.com/snipsco/rustling-ontology", branch = "master" }

[dependencies.neon]
version = "0.10.1"
default-features = false
features = ["napi-6"]